@@ -1,22 +1,29 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<assembly xmlns="urn:schemas-microsoft-com:asm.v1" manifestVersion="1.0">
-<assemblyIdentity
-	version="@TK_WIN_VERSION@"
-	processorArchitecture="@MACHINE@"
-	name="Tcl.Tk.wish"
-	type="win32"
-/>
-<description>Tcl/Tk windowing shell (wish)</description>
-<dependency>
-<dependentAssembly>
-<assemblyIdentity
-	type="win32"
-	name="Microsoft.Windows.Common-Controls"
-	version="6.0.0.0"
-	processorArchitecture="@MACHINE@"
-	publicKeyToken="6595b64144ccf1df"
-	language="*"
-/>
-</dependentAssembly>
-</dependency>
+<assembly xmlns="urn:schemas-microsoft-com:asm.v1" manifestVersion="1.0"
+	xmlns:asmv3="urn:schemas-microsoft-com:asm.v3">
+    <assemblyIdentity
+	    version="@TK_WIN_VERSION@"
+	    processorArchitecture="@MACHINE@"
+	    name="Tcl.Tk.wish"
+	    type="win32"
+	/>
+    <description>Tcl/Tk windowing shell (wish)</description>
+    <asmv3:application>
+	<asmv3:windowsSettings
+		xmlns="http://schemas.microsoft.com/SMI/2005/WindowsSettings">
+	    <dpiAware>true</dpiAware>
+	</asmv3:windowsSettings>
+    </asmv3:application>
+    <dependency>
+	<dependentAssembly>
+	    <assemblyIdentity
+		    type="win32"
+		    name="Microsoft.Windows.Common-Controls"
+		    version="6.0.0.0"
+		    processorArchitecture="@MACHINE@"
+		    publicKeyToken="6595b64144ccf1df"
+		    language="*"
+		/>
+	</dependentAssembly>
+    </dependency>
 </assembly>
